[BUGFIX] select2 drop down z-index

--- a/js/select2/select2.css
+++ b/js/select2/select2.css
@@ -121,7 +121,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     height: auto;
     width: auto;
     opacity: 0;
-    z-index: 9998;
+    z-index: 999998;
     /* styles required for IE to work */
     background-color: #fff;
     filter: alpha(opacity=0);
